fix(Nibiru-Home/sprints#9): Arrgelos tests